# soplace

./: README.md  package-lock.json  package.json
app/: page.tsx
app/components/: GameContainer.tsx
app/game/: MainScene.ts  types.ts
blockchain-service/: .env.example  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  render.yaml  setup.sh
blockchain-service/src/: blockchain.ts  blockchain_http.ts  config.ts  contracts.ts  index.ts  logger.ts  queue.ts  supabase.ts
client/: .env.example  next.config.mjs  package.json  pnpm-lock.yaml
client/src/app/: layout.tsx  page.module.css  page.tsx
client/src/components/: AnimatedBackground.module.css  AnimatedBackground.tsx
client/src/config/: contracts.ts  graphql.ts
client/src/data/: itemMetadata.ts
client/src/hooks/: useContract.ts  (+2 more)
contracts/: README.md  foundry.toml
contracts/script/: ConfigureItems.s.sol  DeployIsometricTilemap.s.sol
contracts/src/: IsometricTilemap.sol
contracts/test/: IsometricTilemap.t.sol
phaser/: .env  pnpm-lock.yaml
phaser/src/: App.tsx
scripts/: pyproject.toml
scripts/examples/: basic_usage.py
scripts/src/cloud_generator/: generator.py
scripts/src/sky_generator/: __init__.py  generator.py
scripts/tests/sky_generator/: test_generator.py
subgraph/: .gitignore  README.md  networks.json  package.json  schema.graphql  subgraph.yaml
subgraph/abis/: IsometricTilemap.json
subgraph/src/: isometric-tilemap.ts
subgraph/tests/: isometric-tilemap-utils.ts  isometric-tilemap.test.ts
supabase/: create-table.sql
supabase/supabase/: config.toml
(+29 files in other folders)
